adding dynamic filtering and fixing the redis sets
